...
    <variable
        name="viewModel"
        type="com.truethat.android.viewmodel.ReactablesPagerViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:id="@+id/activityRootView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".view.fragment.ReactablesPagerFragment"
      >

    <android.support.constraint.ConstraintLayout
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/loadingImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/image_content_description"
        android:scaleType="centerInside"
        android:src="@drawable/anim_loader"
        android:visibility="@{viewModel.mLoadingImageVisibility ? View.VISIBLE : View.GONE}"
...
